--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,5 +9,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v5
       - name: Echo test
         run: echo "Workflow test triggered from develop"
